# simple_tbg

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
include/: battle_state.h  entity.h  menu_state.h  state.h  state_manager.h
src/: entity.cpp  main.cpp
src/states/: battle_state.cpp  menu_state.cpp  state_manager.cpp
